<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Civic Engagement</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="followed_elections">Followed Elections</string>
    <string name="voterinfo_follow_election">Follow election</string>
    <string name="voterinfo_unfollow_election">Unfollow election</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="representative_my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="representative_address_line_1">Address Line 1</string>
    <string name="representative_address_line_2">Address Line 2</string>
    <string name="representative_city">City</string>
    <string name="representative_zip">Zip</string>
    <string name="representative_state">State</string>
    <string name="representative_find_my_representatives_manually_button">Find My Representatives Manually</string>
    <string name="representative_find_my_representatives_through_my_location_button">Find My Representatives Through My Location</string>


    <!-- TODO: Add necessary string values -->

</resources>
