<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Added data binding node via data and variable tags -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- Added motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representative_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <!--Added visual styling and content -->
        <TextView
            android:id="@+id/representative_search_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:singleLine="true"
            android:text="@string/representative_search"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Added data binding value -->
        <!-- Added visual styling and content -->
        <EditText
            android:id="@+id/representative_input_address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/representative_address_line_1"
            android:hint="@string/representative_address_line_1"
            android:inputType="textPostalAddress"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@={viewModel.addressLine1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_search_textview" />

        <!-- Added data binding value -->
        <!-- Added visual styling and content -->
        <EditText
            android:id="@+id/representative_input_address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/representative_address_line_2"
            android:hint="@string/representative_address_line_2"
            android:inputType="textPostalAddress"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@={viewModel.addressLine2}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_input_address_line_1" />

        <!-- Added data binding value -->
        <!-- Added visual styling and content -->
        <EditText
            android:id="@+id/representative_input_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/representative_city"
            android:hint="@string/representative_city"
            android:inputType="textPostalAddress"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/representative_dropdownlist_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_input_address_line_2" />

        <!-- Add default values from provided resources  -->
        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <!--        app:stateValue="@{viewModel.state}"-->
        <Spinner
            android:id="@+id/representative_dropdownlist_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="@string/representative_state"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.state"
            app:layout_constraintBottom_toBottomOf="@id/representative_input_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/representative_input_city"
            app:layout_constraintTop_toTopOf="@id/representative_input_city" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <!--        android:text="@={viewModel.zip}"-->
        <EditText
            android:id="@+id/representative_input_zip_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/representative_zip"
            android:hint="@string/representative_zip"
            android:inputType="number"
            android:maxLength="6"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@={viewModel.zip}"
            app:layout_constraintEnd_toEndOf="@id/representative_input_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_input_city" />

        <!-- Added visual styling and label -->
        <!--        android:onClick="@{() -> viewModel.fetchRepresentatives()}"-->
        <Button
            android:id="@+id/representative_find_my_representatives_manual_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_small"
            android:background="@color/colorPrimaryDark"
            android:text="@string/representative_find_my_representatives_manually_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_input_zip_code" />

        <!-- Added visual styling and content -->
        <Button
            android:id="@+id/representative_find_my_representatives_my_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/default_margin_small"
            android:background="@color/colorPrimaryDark"
            android:text="@string/representative_find_my_representatives_through_my_location_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_find_my_representatives_manual_button" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/representative_my_representatives_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/representative_my_representatives"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_find_my_representatives_my_location_button" />

        <!-- Added Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_my_representatives_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_my_representatives_textview"
            tools:listitem="@layout/item_representative" />

        <ProgressBar
            android:id="@+id/representative_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_my_representatives_textview" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
